fix spacing between what we provide items on landing

--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -6,3 +6,7 @@
   margin-right: 1rem;
   font-size: 4rem;
 }
+
+.for-authors--text {
+  margin-bottom: 0rem;
+}
